[package]
name = "mu"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "fs"] }
reqwest = { version = "0.13", features = ["query", "json"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
dialoguer = "0.12.0"
indicatif = "0.18"
clap = { version = "4", features = ["derive"] }
dirs = "6.0.0"
ctrlc = "3.5"
